--- a/renderer/index.html
+++ b/renderer/index.html
@@ -15,7 +15,24 @@
 <body>
     <header>
         <img class="header-logo" src="../assets/img/logo.PNG" alt="">
-        <x-icon class="header-menu" name="menu" iconset="..//node_modules/xel/iconsets/material-outlined.svg" style="width: 50px; height: 50px;"></x-icon>
+        <div class="header-menu">
+            <x-icon class="menu-icon" name="menu" iconset="..//node_modules/xel/iconsets/material-outlined.svg" ></x-icon>
+            <x-menu class="menu-box" opened>
+                <x-menuitem class="menu-item">
+                    <x-icon name="search" id="query-options"></x-icon>
+                    <x-label>Opciones de Busqueda</x-label> 
+                </x-menuitem>
+                <x-menuitem class="menu-item">
+                    <x-icon name="tune" id="export-options"></x-icon>
+                    <x-label>Opciones de Exportacion</x-label> 
+                </x-menuitem>
+                <hr>
+                <x-menuitem class="menu-item">
+                    <x-icon name="exit"></x-icon>
+                    <x-label>Salir</x-label> 
+                </x-menuitem>
+            </x-menu>
+        </div>
     </header>
 
     <main>
