export options window (blank)

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -22,7 +22,7 @@
                     <x-icon name="search" id="query-options"></x-icon>
                     <x-label>Opciones de Busqueda</x-label> 
                 </x-menuitem>
-                <x-menuitem class="menu-item">
+                <x-menuitem class="menu-item" id='export-settings-btn'>
                     <x-icon name="tune" id="export-options"></x-icon>
                     <x-label>Opciones de Exportacion</x-label> 
                 </x-menuitem>
@@ -100,7 +100,7 @@
     <footer>
         <x-progressbar value="1" max="100"></x-progressbar>
     </footer>
-    <script src="frontend.js" type="module"></script>
+    <script src="./main-window/frontend.js" type="module"></script>
 
 </body>
 </html>
