--- a/renderer/export-settings.html
+++ b/renderer/export-settings.html
@@ -9,11 +9,105 @@
     <meta name="xel-size" content="large">
     <meta name="xel-iconset" content="../node_modules/xel/iconsets/material-outlined.svg">
     <link href="../node_modules/xel-fonts/fonts.css" rel="stylesheet"></link>
-    <link rel="stylesheet" href="../assets/styles/main.css">
+    <link rel="stylesheet" href="../assets/styles/preferences.css">
     <script src="../node_modules/xel/xel.js" type="module"></script>
     <title>Opciones de Exportacion</title>
 </head>
 <body>
+    <header>
+        <x-label>Opciones de Descarga</x-label>
+        <img class="header-logo" src="../assets/img/logo_small.PNG" alt="" srcset="">
+    </header>
+    <main>
+        <div class="options">
+            <x-box class="options-format">
+                <x-label>Formato de descarga:</x-label>
+                <x-select>
+                    <x-menu>
+                        <x-menuitem value="wav" toggled>
+                            <x-label>WAV</x-label>
+                        </x-menuitem>
+                        <x-menuitem value="mp3">
+                            <x-label>MP3</x-label>
+                        </x-menuitem>
+                    </x-menu>
+                </x-select>
+            </x-box>
+            <x-box class="options-overwrite">
+                <x-label>Sobreescribir archivos:</x-label>
+                <x-select>
+                    <x-menu>
+                        <x-menuitem value="si" toggled>
+                            <x-label>Si</x-label>
+                        </x-menuitem>
+                        <x-menuitem value="no">
+                            <x-label>No</x-label>
+                        </x-menuitem>
+                    </x-menu>
+                </x-select>
+            </x-box>
+            <x-box class="options-summary">
+                <x-label>Generar informe:</x-label>
+                <x-select>
+                    <x-menu>
+                        <x-menuitem value="si" toggled>
+                            <x-label>Si</x-label>
+                        </x-menuitem>
+                        <x-menuitem value="no">
+                            <x-label>No</x-label>
+                        </x-menuitem>
+                    </x-menu>
+                </x-select>
+            </x-box>
+
+            <hr>
+
+            <x-box class="filename">
+                <x-box class="filename-label">
+                    <x-label>Nombre de archivo:</x-label>
+                </x-box>
+                <x-box class="filename-column">
+                    <x-box class="filename-field">
+                        <x-checkbox class="filename-check"></x-checkbox>
+                        <x-label class="filename-fieldname">ID Llamada</x-label>
+                    </x-box>
+                    <x-box class="filename-field">
+                        <x-checkbox class="filename-check"></x-checkbox>
+                        <x-label class="filename-fieldname">Hora inicio</x-label>
+                    </x-box>
+                    <x-box class="filename-field">
+                        <x-checkbox class="filename-check"></x-checkbox>
+                        <x-label class="filename-fieldname">Hora fin</x-label>
+                    </x-box>
+                </x-box>
+                <x-box class="filename-column">
+                    <x-box class="filename-field">
+                        <x-checkbox class="filename-check"></x-checkbox>
+                        <x-label class="filename-fieldname">Extension</x-label>
+                    </x-box>
+                    <x-box class="filename-field">
+                        <x-checkbox class="filename-check"></x-checkbox>
+                        <x-label class="filename-fieldname">Nombre de canal</x-label>
+                    </x-box>
+                    <x-box class="filename-field">
+                        <x-checkbox class="filename-check"></x-checkbox>
+                        <x-label class="filename-fieldname">Otro usuario</x-label>
+                    </x-box>
+                    <x-box class="filename-field">
+                        <x-checkbox class="filename-check"></x-checkbox>
+                        <x-label class="filename-fieldname">External call ID</x-label>
+                    </x-box>
+                </x-box>
+            </x-box>
+        </div>
+
+        <x-box class="buttons">
+            <x-button>Guardar</x-button>
+            <x-button>Cancelar</x-button>
+        </x-box>
+
+
+    </main>
     <script src="./export-settings-window/frontend-exp.js"></script>
 </body>
 </html>
