webpreferences in main windows modified to enable remote module. loading preferences in preload

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -43,7 +43,9 @@
 
     <main>
         <section class="status">
-            <x-label class="status-connection">Conectado a 172.20.47.11</x-label>
+            <x-label id="username" class="status-connection"></x-label>
+            <x-label class="status-connection">Conectado a</x-label>
+            <x-label id="recorder" class="status-connection"></x-label>
         </section>
 
         <section class="download-section">
