--- a/renderer/index.html
+++ b/renderer/index.html
@@ -72,7 +72,7 @@
             <x-card class="filter" data-field="end-date" disabled>
                 <x-box class="filter-top">
                     <x-label class="filter-name" disabled>Fecha Final</x-label>
-                    <x-switch id="switch-end-date"></x-switch>
+                    <x-switch id="switch-end-date" disabled></x-switch>
                 </x-box>
                 <x-box class="filter-botton">
                     <x-input type="date" name="" id="" disabled></x-input>
@@ -82,7 +82,7 @@
             <x-card class="filter" disabled>
                 <x-box class="filter-top" disabled>
                     <x-label class="filter-name" disabled>Extension</x-label>
-                    <x-switch id="switch-extension" ></x-switch>
+                    <x-switch id="switch-extension" disabled></x-switch>
                 </x-box>
                 <x-box class="filter-botton" disabled>
                     <x-input type="text" name="" id="" disabled></x-input>
@@ -91,7 +91,7 @@
             <x-card class="filter" disabled>
                 <x-box class="filter-top" disabled>
                     <x-label class="filter-name" disabled>Nombre de Canal</x-label>
-                    <x-switch id="switch-channel-name" ></x-switch>
+                    <x-switch id="switch-channel-name" disabled></x-switch>
                 </x-box>
                 <x-box class="filter-botton" disabled>
                     <x-input type="text" name="" id="" disabled></x-input>
