minor changes in interface

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -31,9 +31,9 @@
 <body>
     <header>
         <img class="header-logo" src="../assets/img/logo.PNG" alt="">
-        <x-button class="header-menu">
+        <x-button id="menu-button" class="header-menu">
             <x-icon class="menu-icon" name="menu" iconset="..//node_modules/xel/iconsets/material-outlined.svg" ></x-icon>
-            <dialog >
+            <dialog id="menu-dialog">
                 <x-buttons vertical tracking="-1" class="menu">
                     <x-button class="menu-item" skin="nav" id="query-options-btn">
                         <x-icon name="person"></x-icon>
