save IDs and Status 1 on SQLite3 data base with better-sqlite electron package

--- a/renderer/export-settings.html
+++ b/renderer/export-settings.html
@@ -22,7 +22,7 @@
         <div class="options">
             <x-box class="options-item">
                 <x-label>Formato de descarga:</x-label>
-                <x-select disabled>
+                <x-select id="format-menu" disabled>
                     <x-menu >
                         <x-menuitem value="wav">
                             <x-label>WAV</x-label>
