change in export setting windows

--- a/renderer/export-settings.html
+++ b/renderer/export-settings.html
@@ -68,16 +68,20 @@
             </x-box>
             <x-box class="filename-column">
                 <x-box class="filename-field">
-                    <x-checkbox class="filename-check" toggled disabled></x-checkbox>
+                    <x-checkbox class="filename-check" disabled></x-checkbox>
                     <x-label class="filename-fieldname">ID Llamada</x-label>
                 </x-box>
                 <x-box class="filename-field">
                     <x-checkbox class="filename-check" toggled disabled></x-checkbox>
-                    <x-label class="filename-fieldname">Hora inicio</x-label>
+                    <x-label class="filename-fieldname">External Call ID</x-label>
                 </x-box>
                 <x-box class="filename-field">
                     <x-checkbox class="filename-check" toggled disabled></x-checkbox>
-                    <x-label class="filename-fieldname">Hora fin</x-label>
+                    <x-label class="filename-fieldname">Fecha Inicio</x-label>
+                </x-box>
+                <x-box class="filename-field">
+                    <x-checkbox class="filename-check" disabled></x-checkbox>
+                    <x-label class="filename-fieldname">Fecha Fin</x-label>
                 </x-box>
             </x-box>
             <x-box class="filename-column">
@@ -87,15 +91,15 @@
                 </x-box>
                 <x-box class="filename-field">
                     <x-checkbox class="filename-check" toggled disabled></x-checkbox>
-                    <x-label class="filename-fieldname">Nombre de canal</x-label>
+                    <x-label class="filename-fieldname">Nombre de Canal</x-label>
                 </x-box>
                 <x-box class="filename-field">
                     <x-checkbox class="filename-check" toggled disabled></x-checkbox>
-                    <x-label class="filename-fieldname">Otro usuario</x-label>
+                    <x-label class="filename-fieldname">Otro Usuario</x-label>
                 </x-box>
                 <x-box class="filename-field">
                     <x-checkbox class="filename-check" toggled disabled></x-checkbox>
-                    <x-label class="filename-fieldname">External call ID</x-label>
+                    <x-label class="filename-fieldname">Grupo de Agente</x-label>
                 </x-box>
             </x-box>
         </x-box>
