--- a/src/renderer/export-settings.html
+++ b/src/renderer/export-settings.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="xel-theme" content="../node_modules/xel/themes/cupertino.css">
+    <meta name="xel-theme" content="../../node_modules/xel/themes/cupertino.css">
     <meta name="xel-accent-color" content="rgba(13, 71, 159, 1)">
     <meta name="xel-size" content="small">
-    <meta name="xel-iconset" content="../node_modules/xel/iconsets/material-outlined.svg">
-    <link href="../node_modules/xel-fonts/fonts.css" rel="stylesheet"></link>
+    <meta name="xel-iconset" content="../../node_modules/xel/iconsets/material-outlined.svg">
+    <link href="../../node_modules/xel-fonts/fonts.css" rel="stylesheet"></link>
     <link rel="stylesheet" href="../assets/styles/preferences.css">
-    <script src="../node_modules/xel/xel.js" type="module"></script>
+    <script src="../../node_modules/xel/xel.js" type="module"></script>
     <title>Opciones de Exportacion</title>
 </head>
 <body>
