group filter box working

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -126,13 +126,13 @@
                     <x-input type="text" name="" id="" disabled></x-input>
                 </x-box>
             </x-card>
-            <x-card class="filter" disabled>
+            <x-card class="filter" >
                 <x-box class="filter-top" disabled>
                     <x-label class="filter-name" disabled>Grupo</x-label>
-                    <x-switch id="switch-group" disabled></x-switch>
+                    <x-switch id="switch-group"></x-switch>
                 </x-box>
                 <x-box class="filter-botton" disabled>
-                    <x-input type="text" name="" id="" disabled></x-input>
+                    <x-input type="text" name="" id="group" disabled></x-input>
                 </x-box>
             </x-card>
         </section>
