--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -127,12 +127,12 @@
                 </x-box>
             </x-card>
             <x-card class="filter" >
-                <x-box class="filter-top" disabled>
+                <x-box class="filter-top">
                     <x-label class="filter-name" disabled>Grupo</x-label>
                     <x-switch id="switch-group"></x-switch>
                 </x-box>
                 <x-box class="filter-botton" disabled>
-                    <x-input type="text" name="" id="group" disabled></x-input>
+                    <x-input type="text" name="group" id="input-group" disabled></x-input>
                 </x-box>
             </x-card>
         </section>
