Manejo de errores, not licensed, notificaciones finales con mas info.

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -153,6 +153,9 @@
                             <x-button id="stop-btn">
                                 <x-label>Detener</x-label>
                             </x-button>
+                            <x-button id="continue-btn">
+                                <x-label>Continuar</x-label>
+                            </x-button>
                         </x-box>
                     </x-box>
                 </dialog>
