error importando ipcrenderer

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -12,7 +12,7 @@
     <script src="../../node_modules/xel/xel.js" type="module"></script>
     <link rel="stylesheet" href="../assets/styles/xel-custom.css">
     <link rel="stylesheet" href="../assets/styles/download.css">
-    <title>Massive Audio Transcoder Decoder</title>
+    <title>MATE | Red Box Recorders Client</title>
 </head>
 <script>
     function DDMMYYYY(value, event) {
