envio formato a main para guardar en settings

--- a/src/renderer/export-settings.html
+++ b/src/renderer/export-settings.html
@@ -22,12 +22,12 @@
         <div class="options">
             <x-box class="options-item">
                 <x-label>Formato de descarga:</x-label>
-                <x-select id="format-menu" disabled>
+                <x-select id="format-menu">
                     <x-menu >
                         <x-menuitem value="wav">
                             <x-label>WAV</x-label>
                         </x-menuitem>
-                        <x-menuitem value="mp3" toggled>
+                        <x-menuitem value="mp3">
                             <x-label>MP3</x-label>
                         </x-menuitem>
                     </x-menu>
