busqueda por varias extensiones y grupos separados por comas

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -120,10 +120,10 @@
             <x-card class="filter" disabled>
                 <x-box class="filter-top" disabled>
                     <x-label class="filter-name" disabled>Extension</x-label>
-                    <x-switch id="switch-extension" disabled></x-switch>
+                    <x-switch id="switch-extension"></x-switch>
                 </x-box>
                 <x-box class="filter-botton" disabled>
-                    <x-input type="text" name="" id="" disabled></x-input>
+                    <x-input type="text" name="extension" id="input-extension" disabled></x-input>
                 </x-box>
             </x-card>
             <x-card class="filter" >
