cambio en la manera que se guardan los settings y configuración de sesión

--- a/src/renderer/export-settings.html
+++ b/src/renderer/export-settings.html
@@ -24,12 +24,12 @@
                 <x-label>Formato de descarga:</x-label>
                 <x-select id="format-menu">
                     <x-menu >
-                        <x-menuitem value="wav">
+                        <!-- <x-menuitem value="wav">
                             <x-label>WAV</x-label>
                         </x-menuitem>
                         <x-menuitem value="mp3">
                             <x-label>MP3</x-label>
-                        </x-menuitem>
+                        </x-menuitem> -->
                     </x-menu>
                 </x-select>
             </x-box>
@@ -112,6 +112,6 @@
 
 
     </main>
-    <script src="./export-settings-window/frontend-exp.js"></script>
+    <script src="./export-settings-window/frontend-export-options.js"></script>
 </body>
 </html>
