--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -117,7 +117,7 @@
                 </x-box>
                 <x-label id="end-date-error" class="error"></x-label>
             </x-card>
-            <x-card class="filter" disabled>
+            <x-card class="filter" id="card-extension" disabled>
                 <x-box class="filter-top" disabled>
                     <x-label class="filter-name" disabled>Extension</x-label>
                     <x-switch id="switch-extension"></x-switch>
@@ -126,7 +126,7 @@
                     <x-input type="text" name="extension" id="input-extension" disabled></x-input>
                 </x-box>
             </x-card>
-            <x-card class="filter" >
+            <x-card class="filter" id="card-group">
                 <x-box class="filter-top">
                     <x-label class="filter-name" disabled>Grupo</x-label>
                     <x-switch id="switch-group"></x-switch>
