--- a/src/renderer/login.html
+++ b/src/renderer/login.html
@@ -35,7 +35,7 @@
                 <x-input class="password-input" id="password" type="password" required></x-input>
             </x-box>
             <x-box class="form-remember">
-                <x-checkbox class="remember-check" id="remember" aria-toggled="true" toggled disabled></x-checkbox>
+                <x-checkbox class="remember-check" id="remember" aria-toggled="true" toggled></x-checkbox>
                 <x-label class="remember-label" for="remember">Recuerdame</x-label>
             </x-box>
 
