--- a/src/renderer/export-settings.html
+++ b/src/renderer/export-settings.html
@@ -68,37 +68,37 @@
             </x-box>
             <x-box class="filename-column">
                 <x-box class="filename-field">
-                    <x-checkbox class="filename-check" disabled></x-checkbox>
+                    <x-checkbox class="filename-check"></x-checkbox>
                     <x-label class="filename-fieldname">ID Llamada</x-label>
                 </x-box>
                 <x-box class="filename-field">
-                    <x-checkbox class="filename-check" toggled disabled></x-checkbox>
+                    <x-checkbox class="filename-check" toggled></x-checkbox>
                     <x-label class="filename-fieldname">External Call ID</x-label>
                 </x-box>
                 <x-box class="filename-field">
-                    <x-checkbox class="filename-check" toggled disabled></x-checkbox>
+                    <x-checkbox class="filename-check" toggled></x-checkbox>
                     <x-label class="filename-fieldname">Fecha Inicio</x-label>
                 </x-box>
                 <x-box class="filename-field">
-                    <x-checkbox class="filename-check" disabled></x-checkbox>
+                    <x-checkbox class="filename-check"></x-checkbox>
                     <x-label class="filename-fieldname">Fecha Fin</x-label>
                 </x-box>
             </x-box>
             <x-box class="filename-column">
                 <x-box class="filename-field">
-                    <x-checkbox class="filename-check" toggled disabled></x-checkbox>
+                    <x-checkbox class="filename-check" toggled></x-checkbox>
                     <x-label class="filename-fieldname">Extension</x-label>
                 </x-box>
                 <x-box class="filename-field">
-                    <x-checkbox class="filename-check" toggled disabled></x-checkbox>
+                    <x-checkbox class="filename-check" toggled></x-checkbox>
                     <x-label class="filename-fieldname">Nombre de Canal</x-label>
                 </x-box>
                 <x-box class="filename-field">
-                    <x-checkbox class="filename-check" toggled disabled></x-checkbox>
+                    <x-checkbox class="filename-check" toggled></x-checkbox>
                     <x-label class="filename-fieldname">Otro Usuario</x-label>
                 </x-box>
                 <x-box class="filename-field">
-                    <x-checkbox class="filename-check" toggled disabled></x-checkbox>
+                    <x-checkbox class="filename-check" toggled></x-checkbox>
                     <x-label class="filename-fieldname">Grupo de Agente</x-label>
                 </x-box>
             </x-box>
