--- a/src/renderer/export-settings.html
+++ b/src/renderer/export-settings.html
@@ -24,12 +24,12 @@
                 <x-label>Formato de descarga:</x-label>
                 <x-select id="format-menu">
                     <x-menu >
-                        <x-menuitem value="wav">
+                        <!-- <x-menuitem value="wav">
                             <x-label>WAV</x-label>
                         </x-menuitem>
                         <x-menuitem value="mp3">
                             <x-label>MP3</x-label>
-                        </x-menuitem>
+                        </x-menuitem> -->
                     </x-menu>
                 </x-select>
             </x-box>
@@ -68,37 +68,37 @@
             </x-box>
             <x-box class="filename-column">
                 <x-box class="filename-field">
-                    <x-checkbox class="filename-check" disabled></x-checkbox>
+                    <x-checkbox class="filename-check"></x-checkbox>
                     <x-label class="filename-fieldname">ID Llamada</x-label>
                 </x-box>
                 <x-box class="filename-field">
-                    <x-checkbox class="filename-check" toggled disabled></x-checkbox>
+                    <x-checkbox class="filename-check" toggled></x-checkbox>
                     <x-label class="filename-fieldname">External Call ID</x-label>
                 </x-box>
                 <x-box class="filename-field">
-                    <x-checkbox class="filename-check" toggled disabled></x-checkbox>
+                    <x-checkbox class="filename-check" toggled></x-checkbox>
                     <x-label class="filename-fieldname">Fecha Inicio</x-label>
                 </x-box>
                 <x-box class="filename-field">
-                    <x-checkbox class="filename-check" disabled></x-checkbox>
+                    <x-checkbox class="filename-check"></x-checkbox>
                     <x-label class="filename-fieldname">Fecha Fin</x-label>
                 </x-box>
             </x-box>
             <x-box class="filename-column">
                 <x-box class="filename-field">
-                    <x-checkbox class="filename-check" toggled disabled></x-checkbox>
+                    <x-checkbox class="filename-check" toggled></x-checkbox>
                     <x-label class="filename-fieldname">Extension</x-label>
                 </x-box>
                 <x-box class="filename-field">
-                    <x-checkbox class="filename-check" toggled disabled></x-checkbox>
+                    <x-checkbox class="filename-check" toggled></x-checkbox>
                     <x-label class="filename-fieldname">Nombre de Canal</x-label>
                 </x-box>
                 <x-box class="filename-field">
-                    <x-checkbox class="filename-check" toggled disabled></x-checkbox>
+                    <x-checkbox class="filename-check" toggled></x-checkbox>
                     <x-label class="filename-fieldname">Otro Usuario</x-label>
                 </x-box>
                 <x-box class="filename-field">
-                    <x-checkbox class="filename-check" toggled disabled></x-checkbox>
+                    <x-checkbox class="filename-check" toggled></x-checkbox>
                     <x-label class="filename-fieldname">Grupo de Agente</x-label>
                 </x-box>
             </x-box>
@@ -112,6 +112,6 @@
 
 
     </main>
-    <script src="./export-settings-window/frontend-exp.js"></script>
+    <script src="./export-settings-window/frontend-export-options.js"></script>
 </body>
 </html>
